<resources>
    <string name="app_name">SafeHands</string>
    <string name="action_settings">Settings</string>

    <string name="font_name_opensans_light">fonts/opensans_light.ttf</string>
    <string name="font_name_opensans_regular">fonts/opensans_regular.ttf</string>
    <string name="font_name_opensans_semibold">fonts/opensans_semibold.ttf</string>
    <string name="opensans_light">opensans_light.ttf</string>
    <string name="opensans_regular">opensans_regular.ttf</string>
    <string name="opensans_semibold">opensans_semibold.ttf</string>

    <string name="nowitest">SafeHands</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_login">LOGIN</string>
    <string name="tab_student">STUDENT</string>
    <string name="tab_admin">ADMIN</string>
    <string name="actionbarTitleHome">SafeHands</string>
    <string name="toast_exit">Please press BACK again to exit</string>
    <string name="test">TEST</string>
    <string name="syllabus">SYLLABUS</string>
    <string name="review">REVIEW</string>
    <string name="analytics">ANALYTICS</string>
    <string name="course">COURSE</string>
    <string name="flashcard">FLASHCARD</string>
    <string name="special_test">SPECIAL TEST\n&amp; COMMUNICATION</string>
    <string name="logout">LOGOUT</string>
    <string name="total_question">Total Question :</string>
    <string name="duration">Duration :</string>
    <string name="marks">Marks :</string>
    <string name="actionbarTitleTest">TEST</string>
    <string name="sync">Sync</string>
    <string name="enter_code">Enter Code</string>
    <string name="button_submit">Submit</string>
    <string name="button_save_next"><![CDATA[Save & Next]]></string>
    <string name="actionbarTitleSpecialTest">SPECIALS</string>
    <string name="tab_special_test">SPECIAL TEST</string>
    <string name="tab_notice_center">NOTICE CENTER</string>
    <string name="button_start_test">START TEST</string>
    <string name="posted_on">Posted on</string>
    <string name="actionbarTitleCourse">COURSE</string>
    <string name="actionbarTitleFlashCard">FLASHCARD</string>
    <string name="actionbarTitleSyllabus">SYLLABUS</string>
    <string name="all_data_sync">All Data Sync</string>
    <string name="clear_all_data">Clear All Data</string>
    <string name="actionbarTitleAdmin">ADMIN</string>
    <string name="logout_admin">Logout</string>
    <string name="actionbarTitleReviewTest">REVIEW</string>
    <string name="button_previous">Previous</string>
    <string name="button_next">Next</string>
    <string name="Dialog_logout_message">Are you sure want to logout?</string>
    <string name="Dialog_exit_yes">Yes</string>
    <string name="Dialog_exit_no">No</string>
    <string name="please_wait">Please wait...</string>
    <string name="Are_you_sure">Are you sure want to submit test?</string>
    <string name="exit_review_test">Are you sure want to exit from review test?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_internet_connection">Please check your internet connection.</string>
    <string name="failed_to_get_data">Failed to get data.</string>
    <string name="error_validation_code">Please enter validation code.</string>
    <string name="Are_you_sure_can_exam">Are you sure want to cancel exam?</string>
    <string name="time_up">Your exam time is finished.</string>
    <string name="button_practice_test">Start Practice Test</string>
    <string name="error_username">Please enter username.</string>
    <string name="error_password">Please enter password.</string>
    <string name="error_invalid_email">Please enter valid email id.</string>
    <string name="actionbarTitleOneTestAnalytics">Analyatics -</string>
    <string name="test_not_available">Test is not available for now.</string>
    <string name="actionbarTitlepdf">PDF</string>
    <string name="most_waited_question">Most Waited Questions</string>
    <string name="file_not_downloaded_yet">File not downloaded yet.</string>
    <string name="sync_success">Sync is completed.</string>
    <string name="Dialog_clear_data_message">Are you want to clear all the data?</string>
    <string name="cleared_all_data">Successfully cleared all the data.</string>
</resources>
