<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@drawable/special_test_blue_bg_box">

        <com.nowitest.util.OpensansSemibold.TextViewRoboto
            android:id="@+id/fragment_special_test_textview_test_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="16dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true">

                <com.nowitest.util.OpensansSemibold.TextViewRoboto
                    android:id="@+id/fragment_special_test_textview_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration"
                    android:textColor="@color/white"
                    android:textSize="16dp"/>

                <com.nowitest.util.OpensansRegular.TextViewRoboto
                    android:id="@+id/fragment_special_test_textview_duration_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="120 minute"
                    android:layout_toRightOf="@id/fragment_special_test_textview_duration"
                    android:textColor="@color/white"
                    android:textSize="16dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <com.nowitest.util.OpensansSemibold.TextViewRoboto
                    android:id="@+id/fragment_special_test_textview_total_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_question"
                    android:textColor="@color/white"
                    android:textSize="16dp"/>

                <com.nowitest.util.OpensansRegular.TextViewRoboto
                    android:id="@+id/fragment_special_test_textview_total_question_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:layout_toRightOf="@id/fragment_special_test_textview_total_question"
                    android:textColor="@color/white"
                    android:textSize="16dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                >

                <com.nowitest.util.OpensansSemibold.TextViewRoboto
                    android:id="@+id/fragment_special_test_textview_marks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marks"
                    android:textColor="@color/white"
                    android:textSize="16dp"/>

                <com.nowitest.util.OpensansRegular.TextViewRoboto
                    android:id="@+id/fragment_special_test_textview_marks_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:layout_toRightOf="@id/fragment_special_test_textview_marks"
                    android:textColor="@color/white"
                    android:textSize="16dp"/>
            </RelativeLayout>
        </RelativeLayout>

        <com.nowitest.util.OpensansSemibold.ButtonTextRoboto
            android:id="@+id/fragment_special_test_button_start_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_start_test"
            android:textColor="@color/black"
            android:background="@drawable/special_test_white_btn"
            android:textAllCaps="false"
            android:textSize="18dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
    </LinearLayout>
</LinearLayout>